style: more overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -33,6 +33,7 @@ header {
     height: 150px;
     position: sticky;
     top: 0;
+    overflow: hidden;
 
     nav, h1 {
         display: flex;
